--- a/.github/workflows/publish_harbor_3key.yaml
+++ b/.github/workflows/publish_harbor_3key.yaml
@@ -13,10 +13,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Install Cosign
-        uses: sigstore/cosign-installer@v3.5.0
+        uses: sigstore/cosign-installer@faadad0cce49287aee09b3a48701e75088a2c6ad # v4
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
@@ -39,8 +39,51 @@ jobs:
             harbor.3key.company/czertainly/czertainly-keycloak-optimized
           tags: |
             type=ref,event=tag
+            type=semver,pattern={{major}}.{{minor}}
+            type=semver,pattern={{major}}
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
             type=raw,value=develop-latest
             type=sha,prefix=develop-,format=long
+
+      - name: Test build Docker image
+        id: build-and-load
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          platforms: linux/amd64
+          file: ./Dockerfile
+          # Build only the host architecture for the pre-scan build;
+          # --load works only when a single platform is produced.
+          load: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+
+      - name: Select tag for scanning
+        id: tag
+        run: |
+          FIRST_TAG="$(echo "${{ steps.meta.outputs.tags }}" | head -n 1)"
+          echo "value=$FIRST_TAG" >> "$GITHUB_OUTPUT"
+
+      - name: Run Trivy vulnerability scanner
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # v0.33.1
+        with:
+          image-ref: ${{ steps.tag.outputs.value }}
+          format: json
+          output: trivy-report.json
+          exit-code: 0
+
+      - name: Upload vulnerability report
+        uses: actions/upload-artifact@v5
+        with:
+          name: trivy-report
+          path: trivy-report.json
+
+      - name: Fail build on vulnerabilities
+        uses: aquasecurity/trivy-action@b6643a29fecd7f34b3597bc6acb0a98b03d33ff8 # v0.33.1
+        with:
+          image-ref: ${{ steps.tag.outputs.value }}
+          trivy-config: config/trivy.yaml
+          skip-setup-trivy: true
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
@@ -50,6 +93,8 @@ jobs:
           platforms: linux/amd64,linux/arm64
           file: ./Dockerfile
           push: true
+          provenance: mode=max
+          sbom: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
